Indicators and im conversions